syntax = "proto3";

package shardman;

option go_package = "github.com/tunvx/simplebank/grpc/pb/shardman";

message InsertCustomerShardRequest {
    string customer_rid = 1;
}

message InsertCustomerShardResponse {
    int64 customer_id = 1;
    int32 shard_id = 2;
}